--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 		.pop-menu awc-popover:hover>awc-button,
 		.pop-menu awc-popover:focus-within>awc-button {
-			color: var(--themeColor, #42b983);
+			color: var(--themeColor, #307fe2);
 		}
 
 		.pop-menu>awc-popbody awc-popbody {
@@ -50,7 +50,7 @@
 		}
 
 		h3 {
-			color: #42b983;
+			color: #307fe2;
 			font-size: 24px;
 		}
 
@@ -102,7 +102,7 @@
 		.header-link {
 			display: block;
 			text-decoration: none;
-			color: #42b983;
+			color: #307fe2;
 			font-size: 16px;
 		}
 	</style>
