--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 		.pop-menu awc-popover:hover>awc-button,
 		.pop-menu awc-popover:focus-within>awc-button {
-			color: var(--themeColor, #307fe2);
+			color: var(--theme-color, #307fe2);
 		}
 
 		.pop-menu>awc-popbody awc-popbody {
@@ -951,7 +951,7 @@
 		<awc-radio onchange="AwcMessage.info('checked:'+this.checked)">radio</awc-radio>
 		<h4>Function</h4>
 		<awc-radio onchange="AwcMessage.info('checked:'+this.checked)">radio</awc-radio>
-		<awc-button type="primary" onfocus="AwcMessage.info('focus')" onclick="this.previousElementSibling.focus()">主动聚焦
+		<awc-button type="primary" onfocus="AwcMessage.info('focus')" onclick="this.previousElementSibling.focus()">Focus
 		</awc-button>
 	</div>
 	<div class="content" id="rate">
